2012-06-07  Peter Bloomfield

	* libbalsa/mailbox.c (lbm_msgno_inserted),
	(lbm_msgno_inserted_idle_cb), (libbalsa_mailbox_msgno_inserted):
	block subthread and use an idle callback to insert message in
	main thread.
	* libbalsa/mailbox_local.c
	(libbalsa_mailbox_local_load_messages): do not grab GDK lock.

2012-06-07  Peter Bloomfield

	* libbalsa/libbalsa.c (libbalsa_threads_enter): warn when
	locking a subthread, to help find bad code paths.

2012-06-07  Peter Bloomfield

	* src/main-window.c: check for NULL index.

2012-06-07  Peter Bloomfield

	* src/balsa-index.c (bndx_find_root): check for NULL tree model.

2012-06-07  Peter Bloomfield

	* src/main-window.c: check for NULL focus widget.

2012-06-06  Peter Bloomfield

	* libbalsa/mailbox.c (libbalsa_mailbox_close), (lbm_msgno_removed),
	(lbm_msgno_removed_idle_cb), (libbalsa_mailbox_msgno_removed):
	use an idle callback to remove the message from the tree-model.

2012-06-06  Peter Bloomfield

	* src/balsa-app.c (find_url_func), (find_url), (find_url_idle_cb),
	(balsa_find_url): block the subthread and use an idle callback
	to find the BalsaMailboxNode for the URL.

2012-06-06  Peter Bloomfield

	* libbalsa/mime-stream-shared.c
	(libbalsa_mime_stream_shared_lock): build with glib < 2.32.

2012-06-05  Peter Bloomfield

	Make changes in previous commit conditional on glib version
	at least 2.32.

	* libbalsa/imap-server.c (libbalsa_imap_server_init),
	(libbalsa_imap_server_finalize): make previous changes
	conditional on glib version at least 2.32.
	* libbalsa/libbalsa-conf.c (lbc_lock), (lbc_unlock): ditto.
	* libbalsa/mime-stream-shared.c (lbmss_stream_class_init),
	(libbalsa_mime_stream_shared_lock),
	(libbalsa_mime_stream_shared_unlock): ditto.

2012-06-05  Peter Bloomfield

	Deprecation cleanup; fixes bgo #677381

	* libbalsa/imap-server.c (libbalsa_imap_server_init),
	(libbalsa_imap_server_finalize): deprecation cleanup.
	* libbalsa/libbalsa-conf.c (lbc_lock), (lbc_unlock): ditto.